ARROW-3514: [C++] Work around insufficient output size estimate on old zlibs

With a manylinux1 zlib (1.2.3.x), one could get the following error when writing
a Parquet table with gzip compress:
"zlib deflate failed, output buffer too small"